--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,12 +1,20 @@
-body {
-    margin: 0;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: #f0f0f0;
-    color: #222;
-}
+// 1. Base styles
+@import 'base/variables';
+@import 'base/reset';
+@import 'base/typography';
+@import 'base/base';
 
-h1 {
-    text-align: center;
-    margin-top: 100px;
-    color: #007acc;
-}
+
+// 2. Layout styles
+@import 'layout/container';
+@import 'layout/header';
+@import 'layout/footer';
+
+
+// 3. Component styles
+@import 'components/buttons';
+@import 'components/forms';
+
+
+// 4. Page-specific styles (стили для конкретных страниц)
+@import 'pages/home';
