--- a/scss/main.css
+++ b/scss/main.css
@@ -329,14 +329,69 @@ img {
 }
 
 .header {
-  padding: 20px 0;
+  padding: 15px 0;
   background-color: #fff;
   border-bottom: 1px solid #ddd;
+  position: relative;
 }
 .header__inner {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+.header__nav {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  background-color: #fff;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  flex-direction: column;
+  padding: 15px;
+}
+.header__nav.is-active {
+  display: flex;
+}
+.header__nav-link {
+  padding: 10px 0;
+  text-align: center;
+}
+.header__burger {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 30px;
+  height: 24px;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+}
+.header__burger span {
+  display: block;
+  width: 100%;
+  height: 3px;
+  background-color: #222;
+  border-radius: 3px;
+}
+@media (min-width: 768px) {
+  .header__nav {
+    display: flex;
+    position: static;
+    width: auto;
+    background-color: transparent;
+    box-shadow: none;
+    flex-direction: row;
+    padding: 0;
+  }
+  .header__nav-link {
+    padding: 0;
+    margin-left: 20px;
+  }
+  .header__burger {
+    display: none;
+  }
 }
 
 .footer {
@@ -417,13 +472,14 @@ img {
   background-color: #f5f5f5;
   padding: 100px 0;
   text-align: center;
+  padding: 60px 0;
 }
 .hero__content {
   max-width: 700px;
   margin: 0 auto;
 }
 .hero__title {
-  font-size: 3rem;
+  font-size: 2.25rem;
   font-weight: 800;
   line-height: 1.2;
   margin-top: 0;
@@ -431,7 +487,7 @@ img {
   color: #333;
 }
 .hero__subtitle {
-  font-size: 1.25rem;
+  font-size: 1.1rem;
   line-height: 1.5;
   margin-bottom: 2rem;
   color: #555;
@@ -439,4 +495,15 @@ img {
 .hero .btn {
   padding: 14px 32px;
   font-size: 1.1rem;
+}
+@media (min-width: 768px) {
+  .hero {
+    padding: 100px 0;
+  }
+  .hero__title {
+    font-size: 3rem;
+  }
+  .hero__subtitle {
+    font-size: 1.25rem;
+  }
 }/*# sourceMappingURL=main.css.map */
