--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -4,6 +4,7 @@
   background-color: #f5f5f5; // Чуть темнее основного фона для выделения
   padding: 100px 0; // Большие отступы для "воздуха"
   text-align: center;
+  padding: 60px 0;
 
   &__content {
     max-width: 700px; // Ограничиваем ширину контента для лучшей читаемости
@@ -11,7 +12,7 @@
   }
 
   &__title {
-    font-size: 3rem; // 48px
+    font-size: 2.25rem;
     font-weight: 800; // Делаем заголовок очень жирным
     line-height: 1.2;
     margin-top: 0;
@@ -20,7 +21,7 @@
   }
 
   &__subtitle {
-    font-size: 1.25rem; // 20px
+    font-size: 1.1rem;
     line-height: 1.5;
     margin-bottom: 2rem;
     color: #555;
@@ -29,5 +30,18 @@
   .btn {
     padding: 14px 32px;
     font-size: 1.1rem;
+  }
+
+  // Возвращаем большие размеры для десктопов
+  @media (min-width: $breakpoint-sm) {
+    padding: 100px 0;
+
+    &__title {
+      font-size: 3rem; // 48px
+    }
+
+    &__subtitle {
+      font-size: 1.25rem; // 20px
+    }
   }
 }
