--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -13,10 +13,15 @@ html {
 
 body {
     margin: 0;
-    background-color: $secondary-color;
+    background-color: $background-primary;
 }
 
 img {
     max-width: 100%;
     height: auto;
+}
+
+section {
+    margin-top: clamp(20px, 3vw, 50px);
+    margin-bottom: clamp(50px, 20vw, 200px);
 }
