--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,12 +1,15 @@
 //================ Variables ================
 
 //===== Colors =====
-$primary-color: #007acc; // Основной цвет (твой синий для заголовка)
-$secondary-color: #f0f0f0; // Второстепенный цвет (фон)
-$text-color: #222; // Основной цвет текста
-$text-light: #fff; // Светлый текст (например, на темном фоне)
-$accent-color: #ff6347; // Акцентный цвет (для кнопок, ссылок)
-$border-color: #ddd; // Цвет рамок
+$primary-color: #49B3FC;
+$secondary-color: #e9e9e9;
+$text-color: #222;
+$text-light: #fff;
+$background-primary: #f8f8f8;
+$background-dark: #3e3e3e;
+$background-light: #dedede;
+$accent-color: #FA5D2A;
+$border-color: #ededed;
 
 //===== Typography =====
 $font-family-main: 'Inter', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -16,10 +19,15 @@ $font-size-base: 16px; // Базовый размер шрифта (1rem)
 $line-height-base: 1.6; // Базовая высота строки
 
 //===== Layout =====
-$container-width: 1440px; // Ширина основного контейнера
+$container-width: 1600px; // Ширина основного контейнера
 $container-padding: 15px; // Внутренние отступы контейнера
 
 $breakpoint-lg: 1200px; // Брейкпоинты для адаптива
 $breakpoint-md: 992px;
 $breakpoint-sm: 768px;
 $breakpoint-xs: 576px;
+
+//===== Transitions =====
+$transition-short: all .2s ease-in;
+$transition-medium: all .5s ease-in;
+$transition-long: all 1s ease-in;
