--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -1,45 +1,49 @@
 //================ Buttons ================
 
 .btn {
-  display: inline-block;
-  padding: 10px 24px;
-  border-radius: 4px;
-  border: 1px solid transparent;
-  background-color: $accent-color;
-  color: $text-light;
-
-  font-family: $font-family-main;
-  font-size: $font-size-base;
-  font-weight: 600;
-  text-align: center;
-  text-decoration: none;
-
-  cursor: pointer;
-  transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease;
-
-  &:hover {
-    background-color: darken($accent-color, 10%);
+    display: inline-flex;
+    padding: 0 20px;
+    border-radius: 8px;
+    border: 1px solid $text-color;
+    background-color: $text-color;
     color: $text-light;
-  }
+    height: 42px;
+    min-height: 42px;
 
-  // Модификатор для основной кнопки
-  &--primary {
-    background-color: $primary-color;
+    font-family: $font-family-main;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 42px;
+    letter-spacing: -.025em;
+    text-align: center;
+    text-decoration: none;
 
-    &:hover {
-      background-color: darken($primary-color, 10%);
-    }
-  }
-
-  // Модификатор для "пустой" кнопки
-  &--outline {
-    background-color: transparent;
-    border-color: $accent-color;
-    color: $accent-color;
+    cursor: pointer;
+    transition: $transition-short;
 
     &:hover {
-      background-color: $accent-color;
-      color: $text-light;
+        background-color: lighten($text-color, 10%);
+        color: $text-light;
     }
-  }
+
+    // Модификатор для основной кнопки
+    &--primary {
+        background-color: $primary-color;
+
+        &:hover {
+            background-color: darken($primary-color, 10%);
+        }
+    }
+
+    // Модификатор для "пустой" кнопки
+    &--outline {
+        background-color: transparent;
+        border-color: $text-color;
+        color: $text-color;
+
+        &:hover {
+            background-color: lighten($text-color, 10%);
+            color: $text-light;
+        }
+    }
 }
