--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -22,7 +22,7 @@
   border: 1px solid $border-color;
   border-radius: 4px;
   
-  transition: border-color 0.3s ease, box-shadow 0.3s ease;
+  transition: $transition-short;
 
   &:focus {
     outline: none;
