--- a/scss/main.css
+++ b/scss/main.css
@@ -621,6 +621,7 @@ section {
   font-family: "Manrope", sans-serif;
   font-size: 2rem;
   font-weight: 700;
+  line-height: 120%;
   margin-bottom: clamp(40px, 5vw, 96px);
   text-align: left;
   color: #222;
@@ -658,6 +659,9 @@ section {
   color: #222;
 }
 .portfolio-card__figure {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   height: auto;
   aspect-ratio: 4/3;
@@ -666,16 +670,27 @@ section {
   border-radius: 14px;
   overflow: hidden;
   position: relative;
+  padding: 2rem;
+}
+.portfolio-card__figure .background {
+  content: "";
+  position: absolute;
+  inset: 0;
+  z-index: -1;
+  background-image: url(img/udi.webp);
+  background-color: #222;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  filter: blur(5px) brightness(0.5);
 }
 .portfolio-card__figure img {
   width: 100%;
-  height: 100%;
+  height: auto;
+  aspect-ratio: 16/9;
   -o-object-fit: cover;
      object-fit: cover;
-  transition: all 0.5s ease-in;
-}
-.portfolio-card__figure:hover img {
-  transform: scale(1.1);
+  border-radius: 8px;
 }
 .portfolio-card__figure-hover {
   display: flex;
